syntax = "proto3";

option csharp_namespace = "WebScraping.OpenAI.Grpc";

package webScraping;

service WebScraping {
  rpc GetLastMatch (LastMatchRequest) returns (LastMatchReply);
  rpc GetNextMatch (NextMatchRequest) returns (NextMatchReply);
}

message LastMatchRequest {
  string team = 1;
}

message LastMatchReply {
  string lastMatch = 1;
}

message NextMatchRequest {
  string team = 1;
}

message NextMatchReply {
  string nextMatch = 1;
}
